# bluer-airpods-monitor

./: Cargo.nix  Cargo.toml  flake.nix
src/: aap.rs  main.rs  pctl.rs  tray.rs
