[package]
name = "bluez-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bluer = { version = "0.17.3", features = ["full"] }
env_logger = "0.11.5"
ksni = "0.2.2"
log = "0.4.22"
mpris = "2.0.1"
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["io-std", "io-util", "rt-multi-thread", "signal"] }
